<resources>
    <string name="app_name">Cinema</string>
    <string name="booki">Magnifisent</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="read_it_together">Films wait you</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget Password.?</string>
    <string name="login_error">Username can not be empty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
<!--Registration activity-->
    <string name="loginTextViewRegistration">Логин</string>
    <string name="emailTextViewRegistration">Почта</string>
    <string name="passwordTextViewRegistration">Пароль</string>
    <string name="showPasswordSwitchRegistration">Показать пароль</string>
    <string name="loginEditTextRegistration">Example123</string>
    <string name="emailEditTextRegistration">example@gmail.com</string>
    <string name="passwordEditTextRegistration">Введите ваш пароль</string>
    <string name="confirmButtonRegistration">Регистрация</string>
    <string name="citationTextViewRegistration">Фильм – это жизнь, с которой вывели пятна скуки.</string>
    <string name="citationAuthorTextViewRegistration">Алфред Хичкок</string>
    <!--Login activity-->
    <string name="AppName">Magnificent</string>
    <string name="welcomeTextViewLogin">С Возвращением</string>
    <string name="newFilmsTextViewLogin">Новые фильмы ждут вас!</string>
    <string name="loginTextViewLogin">Логин</string>
    <string name="passwordTextViewLogin">Пароль</string>
    <string name="confirmRegistrationButtonLogin">Регистрация</string>
    <string name="stayBackSwitchLogin">Не выходить</string>
    <string name="enterButtonLogin">Войти</string>
    <string name="skipButtonLogin">Пропустить</string>
</resources>
